BUGFIX: Make links in inspector analysis hints visible
These links provide external help for some results to the editor.

--- a/Resources/Private/Scripts/YoastInfoView/src/style.css
+++ b/Resources/Private/Scripts/YoastInfoView/src/style.css
@@ -25,6 +25,11 @@
 
         a {
             color: var(--colors-ContrastBrightest);
+            text-decoration: underline;
+
+            &:hover {
+                text-decoration: none;
+            }
         }
     }
 
